--- a/package.json
+++ b/package.json
@@ -12,23 +12,28 @@
     "dev": "concurrently \"npm run server\" \"npm start\""
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.10",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^5.17.1",
+    "@mui/material": "^5.17.1",
     "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "framer-motion": "^12.6.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "mongoose": "^7.1.1",
     "multer": "^1.4.5-lts.2",
     "pdfjs-dist": "^3.11.174",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
+    "react-spring": "^9.7.5",
+    "react-use-gesture": "^9.1.3",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "tesseract.js": "^4.1.4",
