--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^5.17.1",
     "@mui/material": "^5.17.1",
+    "@react-three/drei": "^9.88.0",
+    "@react-three/fiber": "^8.15.0",
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow-models/toxicity": "^1.2.2",
+    "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
     "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^11.5.0",
     "framer-motion": "^12.6.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
@@ -30,13 +36,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.16.0",
-    "react-router-dom": "^6.22.1",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
     "react-spring": "^9.7.5",
     "react-use-gesture": "^9.1.3",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "tesseract.js": "^4.1.4",
+    "three": "^0.174.0",
     "web-vitals": "^2.1.4",
     "winston": "^3.17.0"
   },
