Revert "Refactor: integrate project with Nextjs"

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,15 +2,6 @@
   "name": "smartscan-frontend",
   "version": "0.1.0",
   "private": true,
-  
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build react-scripts",
-    "start": "next start react-scripts",
-      "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "next lint"
-  },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -22,26 +13,21 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-  
     "axios": "^1.8.4",
     "firebase": "^11.6.0",
     "framer-motion": "^11.0.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "next": "15.2.4"
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.4",
-    "@eslint/eslintrc": "^3",
-    "http-proxy-middleware": "^3.0.3"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -61,6 +47,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001"
- 
+  "proxy": "http://localhost:3001",
+  "devDependencies": {
+    "http-proxy-middleware": "^3.0.3"
+  }
 }
